syntax = "proto3";

package proto;

option go_package = "proto/";
option java_multiple_files = true;

message MataKuliah {
  string kode = 1;
  string nama = 2;
  int32 sks = 3;
  string dosen = 4;
  string semester = 5;
}

message CreateUpdateKRSRequest {
   string token = 1;
   int32 id_mahasiswa = 2;
   repeated MataKuliah mata_kuliahs = 3;
}

message ReadKRSRequest {
   string token = 1;
   int32 id_mahasiswa = 2;
}

message DeleteKRSRequest {
   string token = 1;
   int32 id_mahasiswa = 2;
   int32 id_mata_kuliah = 3;
}

message KRSResponse {
   repeated  MataKuliah mata_kuliahs = 1;
}

message DeleteKRSResponse {
   string status = 1;
}

service KrsService {
   rpc Read(ReadKRSRequest) returns (KRSResponse);
   rpc Create(CreateUpdateKRSRequest) returns (KRSResponse);
   rpc Update(CreateUpdateKRSRequest) returns (KRSResponse);
   rpc Delete(DeleteKRSRequest) returns (DeleteKRSResponse);
}